[project]
name = "growth-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Laurenyoshizuka",email = "laurenyoshizuka@gmail.com"}
]
packages = [{ include = "pages" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "duckdb (>=1.2.1,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"